rename classes and fix alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-image: linear-gradient(to right, rgb(19, 19, 83), rgba(109, 38, 195, 0.645));
+    background-image: linear-gradient(to left, rgb(19, 19, 83), rgba(105, 14, 216, 5));
     color: white;
     margin: 0 auto;
     text-align: center;
@@ -15,7 +15,7 @@ header {
     height: 75px;
 }
 
-.city-search {
+.citySearch {
     margin: 15px;
 }
 
@@ -29,16 +29,20 @@ header {
     margin: 0 auto;
 }
 
-.city-display {
+.dashboard {
+    display: block;
+}
+
+.currentWeather {
     width: 800px;
-    height: 300px;
+    height: 325px;
     border: solid 1px black;
     margin: 10px;
 }
 
-.week-display {
+.futureWeather {
     width: 800px;
-    height: 250px;
+    height: 325px;
     text-align: left;
     margin: 10px;
 }
@@ -46,13 +50,12 @@ header {
 ul {
     list-style-type: none;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    padding: 0px;
 }
 
 .day {
-    width: 225px;
-    height: 250px;
+    width: 150px;
+    height: 175px;
     margin: 5px;
     border-radius: 5px;
     background-color: rgb(19, 19, 83);
